--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/nodemon": "^1.19.6",
     "@types/pg": "^8.11.0",
     "@types/sequelize": "^4.28.20",
+    "@types/yup": "^0.32.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
@@ -27,9 +28,11 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.3",
+    "parse-bearer-token": "^1.0.1",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "ts-node": "^10.9.2"
