--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon --exec ts-node ./src/app.ts",
-    "sync": "ts-node ./src/DB/sync.ts"
+    "sync": "ts-node ./src/DB/sync.ts",
+    "build": "rimraf ./build && tsc --skipLibCheck",
+    "start": "cross-env NODE_ENV=production node ./build/app.js"
   },
   "dependencies": {
     "@types/body-parser": "^1.19.5",
@@ -17,6 +19,7 @@
     "@types/node": "^20.11.14",
     "@types/nodemon": "^1.19.6",
     "@types/pg": "^8.11.0",
+    "@types/rimraf": "^4.0.5",
     "@types/sequelize": "^4.28.20",
     "@types/yup": "^0.32.0",
     "body-parser": "^1.20.2",
@@ -30,6 +33,7 @@
     "nodemon": "^3.0.3",
     "parse-bearer-token": "^1.0.1",
     "pg": "^8.11.3",
+    "rimraf": "^5.0.5",
     "sequelize": "^6.35.2",
     "typescript": "^5.3.3",
     "yup": "^1.3.3"
