--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@types/pg": "^8.11.0",
     "@types/rimraf": "^4.0.5",
     "@types/sequelize": "^4.28.20",
+    "@types/sharp": "^0.32.0",
     "@types/yup": "^0.32.0",
     "body-parser": "^1.20.2",
+    "cloudinary": "^2.0.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
@@ -35,6 +37,7 @@
     "pg": "^8.11.3",
     "rimraf": "^5.0.5",
     "sequelize": "^6.35.2",
+    "sharp": "^0.33.2",
     "typescript": "^5.3.3",
     "yup": "^1.3.3"
   },
